2012-06-XX
  + 2012.2 release

  * Better handling of "readonly" boot parameter for some boot media

  * Added VIPS image manipulation toolkit (including nip2 GUI)
  * Removed ePDFView


2012-05-11
  + 2012.1 release

  * Kernel 3.2.11 with devtmpfs in initramfs
  * Fixed memory wiping in KEXEC kernel
  * Removed almost all PaX protection exceptions
  * Fixed multilingual disk labels support for automount
  * Fixed 3G support for modems with PIN unlocking
  * More extensive firmware support
  * Better hardware support (nVidia SATA, BRCM4313, DVBs, joysticks, tablets)
  * Experimental (U)EFI booting support using GRUB 2

  * Better filesystem security (read-only root fs)
  * CD boot media ejection now triggers shutdown (same as USB boot media)
  * Filesystem is now FHS-3.2+/run-compliant
  * Removed framebuffer console splash and decoration
  * Reworked framebuffer handling and simplified boot menu entries
  * Added SquashFS image verification during early boot
  * Added "readonly" boot parameter for disabling persistence
  * Added "toram" boot parameter for copying root filesystem to RAM
  * Added "gentoo=xvesa" boot parameter for forcing VESA driver in X server
  * Added "gentoo=xfb" boot parameter for forcing framebuffer driver in X server
  * setup.sh now supports "auto" mode, w/o unmounting and script copying
  * setup.sh is now more robust (MBR write fix, 64-bit-only systems warning)

  * Cables communication maintains perfect forward secrecy and repudiability
  * Added Open Virtualization bundle (OVA) (backported to 2011.2)

  * Better support for VMware and VirtualBox virtualization
  * Better support for regular mailboxes in Claws-Mail
  * Better Bluetooth support
  * Replaced Midori browser with Epiphany (also based on WebKit-GTK+)
  * Replaced SCIM input methods manager with uim
  * Added gFTP file transfer client
  * Added uGet download manager
  * Replaced Xarchiver with File Roller