@@ -64,9 +64,6 @@ LIRC_DEVICES="sir devinput bte mceusb hauppauge hauppauge_dvb"
 # LINGUAS="en en_GB fr de es eu pt it ru uk hi pa kn gu bn te ta si ml zh ja ko th vi ne ar he am"
 LINGUAS="*"
 
-# HTTP servers
-NGINX_MODULES_HTTP="access fastcgi gzip limit_req limit_zone map rewrite stub_status"
-
 # GRUB EFI
 GRUB_PLATFORMS="efi-32 efi-64"
 
