@@ -1,1 +1,0 @@
-../cable/nginx.conf
