@@ -21,9 +21,9 @@ TransPort            9040
 ## The directory for keeping all the keys/etc.
 DataDirectory        /var/lib/tor/data
 
-## Hidden service on local port 80
+## Hidden service on local port 80 -> 9080
 HiddenServiceDir     /var/lib/tor/hidden_service/
-HiddenServicePort    80 127.0.0.1:80
+HiddenServicePort    80 127.0.0.1:9080
 
 ## Easy operation behind firewalls, also disguise
 ## connections somewhat.
