@@ -1,3 +1,3 @@
-DIST cables-3.1.1.tar.gz 33276 RMD160 797d75ba5bc5e174255e7102c06017da47dd234c SHA1 beaac33f9894111f1c518f5c2702adb94ac59e0a SHA256 dc00e3ea213b97ce4c4e9bb7e72c93a6137df99e8bf7a6425134c7a8aac60628
+DIST cables-3.2.0.tar.gz 35317 RMD160 dcf405d656f084bb3ad613c718c5b3c96e9471aa SHA1 2de6288c1c337228803a70161f196a602d02378c SHA256 00fd8d23a3a17488c093432ce67d5988dfcfcc9f0451b9061551005f588b9d9e
 DIST i2pupdate_0.8.8.zip 5041856 RMD160 0aa592660835fb64a977bec04958c77d17e9aa4c SHA1 e6caa760a80553b189eef8673d6291654f5ea3c8 SHA256 5c454ca3e63f436df4abbd394e6aa66da280b57179453eb5f90dff33325d9259
-EBUILD cables-3.1.1.ebuild 3618 RMD160 c6e43574bee1f9cfff7b817f0a840b9b4d257c89 SHA1 f2bd1b5b1d88287fff356665a297c15d680439dd SHA256 341cfec7d1af3be3038b79a5858493235387648ce3d63954797ac6a0ca0ee796
+EBUILD cables-3.2.0.ebuild 2420 RMD160 53350134980b4f038eb940a6b7d6598c715c0664 SHA1 cb9d29b6367c1ebdeaade780c94cb1cc9f815806 SHA256 7197ef479642248f0f941b596ce4e2af44ac5143527e36de137c5ba3a3d847db
