@@ -54,7 +54,7 @@ tunnel.2.name=I2P Webserver
 tunnel.2.description=Cables Communication via I2P
 tunnel.2.type=httpserver
 tunnel.2.targetHost=127.0.0.1
-tunnel.2.targetPort=80
+tunnel.2.targetPort=9080
 tunnel.2.spoofedHost=mysite.i2p
 tunnel.2.privKeyFile=eepsite/eepPriv.dat
 tunnel.2.i2cpHost=127.0.0.1
