@@ -3,6 +3,8 @@
 
   * Better handling of "readonly" boot parameter for some boot media
 
+  * Cables communicatioon is now self-contained, based on libmicrohttpd
+
   * Added VIPS image manipulation toolkit (including nip2 GUI)
   * Removed ePDFView
 
